--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -3,7 +3,7 @@ name: Hot News Crawler
 on:
   schedule:
     # 我们使用的是 github 官方提供的资源来进行的推送，而每个账号的资源是限额的，为了不被官方判定为滥用而面临封号的风险，不建议比半小时更低
-    - cron: "0 0-14/2 * * *" # 每两小时运行一次（UTC 小时 0-14 步长 2 -> Asia/Shanghai 为每天 08:00-22:00）
+    - cron: "0 0-14 * * *" # 每两小时运行一次（UTC 小时 0-14 步长 2 -> Asia/Shanghai 为每天 08:00-22:00）
   workflow_dispatch:
 
 # 添加权限设置
